@startuml

skinparam defaultFontName monospaced

'=======================================================================================================================
package renderer_context {
    '===================================================================================================================
    enum RendererType {
        OpenGl
        Vulkan
        Direct3d
        Sdl
    }

    '===================================================================================================================
    abstract class RendererContext {
        + {abstract} getRendererType()
    }

    '-------------------------------------------------------------------------------------------------------------------
    RendererContext *-- RendererType
}

'=======================================================================================================================
package render_2d {
    abstract class Renderer
}

'=======================================================================================================================
package render_3d {
    abstract class Renderer
}

'=======================================================================================================================
package render {
    '===================================================================================================================
    abstract class Renderer {
        + ctor(RendererContext)
    --
        + {abstract} clear(Color)
        + {abstract} finalizeRender()
    --
        + getRendererContext() -> &
        + getTexturingMgr() -> &
        + getTextureStorage() -> &
    --
        + {abstract} get2dRenderer() -> render_2d.Renderer&
        + {abstract} get3dRenderer() -> render_3d.Renderer&
    }

    '-------------------------------------------------------------------------------------------------------------------
    Renderer *-- renderer_context.RendererContext
    Renderer *-- render_2d.Renderer
    Renderer *-- render_3d.Renderer
}

'=======================================================================================================================
package framework {
    '===================================================================================================================
    abstract class Framework {
        + {abstract} createRenderer(RendererContext) -> render.Renderer
    }

    '-------------------------------------------------------------------------------------------------------------------
    Framework --> renderer_context.RendererContext
    Framework --> render.Renderer
}

'=======================================================================================================================
@enduml
